src/test/ui/issues/issue-46604.mir.stderr
error[E0017]: references in statics may only refer to immutable values
  --> $DIR/issue-46604.rs:4:25
   |
LL | static buf: &mut [u8] = &mut [1u8,2,3,4,5,7];
   |                         ^^^^^^^^^^^^^^^^^^^^ statics require immutable values

error[E0594]: cannot assign to `buf[_]`, as `buf` is an immutable static item
  --> $DIR/issue-46604.rs:10:5
   |
LL |     buf[0]=2;
   |     ^^^^^^^^ cannot assign

error: aborting due to 2 previous errors

Some errors occurred: E0017, E0594.
For more information about an error, try `rustc --explain E0017`.
